--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "my-electron-app",
 	"version": "1.0.0",
+    "type": "module",
 	"description": "My electron app",
 	"main": "main.js",
 	"scripts": {
@@ -27,6 +28,7 @@
 	},
 	"dependencies": {
 		"electron-squirrel-startup": "^1.0.1",
+		"toastify-js": "^1.12.0",
 		"update-electron-app": "^3.1.1"
 	}
 }
